--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@yamada-ui/calendar": "^1.3.0",
+    "@yamada-ui/react": "^1.3.12",
+    "@yamada-ui/table": "^1.0.33",
     "axios": "^1.7.1",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
