--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "@yamada-ui/calendar": "^1.3.0",
     "@yamada-ui/react": "^1.3.12",
     "@yamada-ui/table": "^1.0.33",
     "axios": "^1.7.1",
+    "eslint-plugin-react": "^7.34.2",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.11"
@@ -23,7 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "typescript": "^5"
   }
